# smart-group-expense-manager

./: .dockerignore  README.md  pyproject.toml  requirements.txt
app/bootstrap/: container.py
app/common/: background_tasks.py  config.py  logger.py
app/domain/domain_services/: settlement_calculator.py
app/domain/entities/: expense.py  group.py  settlement.py  user.py
app/domain/repositories/: expense_repository.py  group_repository.py  settlement_repository.py  user_repository.py
app/domain/split_strategies/: base.py  custom.py  equal.py  factory.py  percentage.py
app/interface/: cli.py
app/interface/commands/: __init__.py  expense_commands.py  group_commands.py  settlement_commands.py  user_commands.py
app/interface/menu/: handlers.py
app/persistence/mysql/: db.py  expense_repo_mysql.py  group_repo_mysql.py  settlement_repo_mysql.py  user_repo_mysql.py
app/services/: expense_service.py  group_service.py  settlement_service.py  user_service.py
docker/: .env  Dockerfile  docker-compose.yml
docker/db/: init.sql
tests/: conftest.py
tests/domain/domain_services/: test_settlement_calculator.py
tests/domain/split_strategies/: test_custom_split.py  test_equal_split.py  test_percentage_split.py
tests/services/: test_expense_service.py  test_group_service.py  test_settlement_service.py  test_user_service.py
